# zf-tools-rs

./: Cargo.toml  README.md
examples/: ClassList.rs  Login.rs  MajorList.rs  class_list.rs  gpa.rs  major_list.rs  profile.rs  score_list.rs  suggested_course_list.rs  timetable.rs
src/: client.rs  config.rs  error.rs  global_config.rs  lib.rs  parsers.rs  session.rs
src/client/: environment.rs  user.rs
src/parsers/: classes.rs  profile.rs  score.rs  select_course.rs  timetable.rs  user_profile.rs
