[package]
name = "zf-tools-rs"
version = "0.1.0"
edition = "2018"
readme = "README.md"
keywords = ["zhengfang", "sdk"]
categories = ["api-bindings", "web-programming"]
license = "GPLv3"
repository = "https://github.com/SIT-Yiban/zf-tools-rs"
description = "基于 Rust 编写的新版正方教务系统 SDK"

[dependencies]
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
async-trait = "0.1"
chrono = { version = "0.4" }
tokio = { version = "1", features = ["full"] }