[package]
name = "zf-tools-rs"
version = "0.1.0"
edition = "2018"
readme = "README.md"
keywords = ["zhengfang", "sdk"]
categories = ["api-bindings", "web-programming"]
license = "GPLv3"
repository = "https://github.com/SIT-Yiban/zf-tools-rs"
description = "基于 Rust 编写的新版正方教务系统 SDK"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4" }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
base64 = "0.13.0"
const_format = "0.2"
rsa = "0.5.0"
rand = "0.8.4"
regex = "1"
scraper = "0.12.0"